eeepc-acpi-scripts (1.1.6) UNRELEASED; urgency=low

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Fri, 18 Dec 2009 16:48:05 +0000

eeepc-acpi-scripts (1.1.5) unstable; urgency=high

  [ Darren Salt ]
  * Fix Super Hybrid Engine support breakage in 1.1.4.
    A missing "[" caused the AC-adaptor-unplugged code to fail; consequently,
    the preferred running-on-battery mode (the default being underclocked)
    would not be selected.
  * Set urgency=high (for documentation reasons; due to 1.1.4).
  * Add myself to Uploaders.

  [ Damyan Ivanov ]
  * add DMUA flag
  * rules: add small test suite for all shell scripts

 -- Damyan Ivanov <dmn@debian.org>  Fri, 18 Dec 2009 07:38:14 +0200

eeepc-acpi-scripts (1.1.4) unstable; urgency=low

  * rules: when stripping comments from /etc/default/eeepc-acpi-scripts, also
    remove lines consisting solely of '#'
  * when changing Super Hybrid Engine modes, ignore models 701 and 702 which
    don't officially support S.H.E. (Closes: #559578)
    Additionally provide a variable in the default file to override the ignore

 -- Damyan Ivanov <dmn@debian.org>  Wed, 16 Dec 2009 22:56:18 +0200

eeepc-acpi-scripts (1.1.3) unstable; urgency=low

  [ Darren Salt ]
  * Init script fixups for when /etc/default/eeepc-acpi-scripts is missing;
    ensure that we default to "automatic" for our S.H.E. handling. 
  * Belatedly bump acpid version requirement. (Closes: #550119)
  * Bring the copyright file up to date.
  * Allow setting of whether the super hybrid engine control defaults to
    manual or auto.
  * Strip out comments from /etc/default/eeepc-acpi-scripts and store a
    fully-commented copy in /usr/share/doc/eeepc-acpi-scripts/examples/.
  * Add configuration support for Fn-F4 on 10" models. No action is defined.
  * Make VGA toggling into a bindable function.
  * Fix a bug which prevented touchpad toggling from working properly.

  [ Damyan Ivanov ]
  * rules: call dh_installinit with -u'start 20 S .' to prevent