@@ -1,0 +1,2 @@
+event=video/(brightness|switchmode)
+action=/etc/acpi/actions/hotkey.sh - %e
